--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 header {
-  background: #0d6efd;
+  background: ##008000;
   color: white;
   padding: 20px 0;
   text-align: center;
@@ -87,15 +87,15 @@ h2 {
 footer {
   text-align: center;
   padding: 20px;
-  background: #0d6efd;
+  background: ##008000;
   color: white;
   margin-top: 40px;
 }
 
+a.tiktok,
 a.linkedin,
 a.facebook,
 a.twitter,
-a.github,
 a.instagram,
 a.whatsapp {
   text-decoration: none;
