--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 header {
-  background: ##008000;
+  background:  #008000;
   color: white;
   padding: 20px 0;
   text-align: center;
@@ -87,7 +87,7 @@ h2 {
 footer {
   text-align: center;
   padding: 20px;
-  background: ##008000;
+  background: #008000;
   color: white;
   margin-top: 40px;
 }
