--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
+}
 
 .ul {
   list-style-type: none;
@@ -30,13 +31,13 @@
 }
 
 body {
-  background: #90EE90;
+  background: #f4f4f4;
   color: #333;
   line-height: 1.6;
 }
 
 header {
-  background:  #008000;
+  background: #0d6efd;
   color: white;
   padding: 20px 0;
   text-align: center;
@@ -65,7 +66,6 @@ section {
   padding: 20px;
   background: white;
   border-radius: 8px;
-  background: #90EE90;
   box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
 
@@ -88,15 +88,15 @@ h2 {
 footer {
   text-align: center;
   padding: 20px;
-  background: #008000;
+  background: #0d6efd;
   color: white;
   margin-top: 40px;
 }
 
-a.tiktok,
 a.linkedin,
 a.facebook,
 a.twitter,
+a.github,
 a.instagram,
 a.whatsapp {
   text-decoration: none;
@@ -110,6 +110,5 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
-
 
 
