--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 header {
-  background: #0d6efd;
+  background: #008000;
   color: white;
   padding: 20px 0;
   text-align: center;
@@ -69,6 +69,18 @@ section {
   box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
 
+section.profile-pic{
+  width:100%;
+  height:60%
+}
+
+.bx bx-map,
+bx bx-phone,
+bx bx-envelope{
+font-size:30px;
+text-decoration: none;
+}
+
 h2 {
   color: #0d6efd;
   margin-bottom: 10px;
@@ -88,17 +100,27 @@ h2 {
 footer {
   text-align: center;
   padding: 20px;
-  background: #0d6efd;
+  background: #008000;
   color: white;
   margin-top: 40px;
 }
 
+a.tiktok,
 a.linkedin,
 a.facebook,
 a.twitter,
-a.github,
 a.instagram,
 a.whatsapp {
+  text-decoration: none;
+}
+
+a.bx bxl-tiktok,
+a.bx bxl-linkedin,
+a.bx bxl-facebook,
+a.bx bxl-twitter,
+a.bx bxl-instagram,
+a.bx bxl-whatsapp {
+  font-size:30px;
   text-decoration: none;
 }
 
