--- a/style.css
+++ b/style.css
@@ -16,29 +16,63 @@
   z-index: 1001;
 }
 
-.ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-.li {
-  float: left;
-}
-
-.li .a {
-  display: block;
+/* Sidebar menu styling */
+#sidebar {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 25%;
+  height: 100%;
+  background-color: #008000;
   color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  padding: 20px;
+  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+  transition: left 0.3s ease-in-out;
+  z-index: 9999;
 }
 
-.li .a:hover {
-  background-color: #111;
+#sidebar.active {
+  left: 0;
 }
+
+#sidebar ul {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 50px;
+}
+
+#sidebar ul li {
+  margin: 20px 0;
+}
+
+#sidebar ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+#close-icon {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+/* Hamburger icon position */
+#hamburger-icon {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 30px;
+  left: 20px;
+  color: white;
+  z-index: 10000;
+}
+
+/*.li .a:hover {
+  background-color: #111;
+}*/
 
 body {
   background: #f4f4f4;
