--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ section.profile-pic{
   text-align: justify;
 }
 
+.bx bx-map-text{
+  text-align: justify;
+}
+
 .bx bx-map,
 bx bx-phone,
 bx bx-envelope{
