--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   position: relative;
   width: 100%;
   max-width: 800px;
-  height: 400px;
+  height: 100%;
   margin: 0 auto;
   overflow: hidden;
   border-radius: 10px;
@@ -146,7 +146,9 @@ section.profile-pic{
   height:60%
 }
 
-#Admission {
+#About Us,
+#Admission,
+#Contact Us{
   text-align: justify;
 }
 
