--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   position: relative;
   width: 100%;
   max-width: 800px;
-  height: 100%;
+  height: 800px;
   margin: 0 auto;
   overflow: hidden;
   border-radius: 10px;
