--- a/style.css
+++ b/style.css
@@ -146,9 +146,10 @@ section.profile-pic{
   height:60%
 }
 
-#About Us,
+#About-Us,
 #Admission,
-#Contact Us{
+#Contact-Us,
+#Our-Vision{
   text-align: justify;
 }
 
