--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
   font-size: 18px;
 }
 
-#sidebar ul li a:hover {
+#sidebar ul li:hover {
     color: limegreen;
     transition: color 0.3s ease;
     background-color: #f0f0f0;
