--- a/style.css
+++ b/style.css
@@ -76,11 +76,10 @@
   font-size: 18px;
 }
 
-#sidebar ul li:hover {
+#sidebar ul li a:hover {
     color: limegreen;
     transition: color 0.3s ease;
-    background-color: #f0f0f0;
-    width:100%;
+    
 }
 
 
