--- a/style-mobile.css
+++ b/style-mobile.css
@@ -17,3 +17,26 @@
     font-size: 14px;
   }
 }
+
+.school-stats {
+                flex-direction: column;
+                padding: 30px 10px;
+            }
+            
+            .stat-item {
+                margin-bottom: 30px;
+                min-width: 150px;
+            }
+            
+            .stat-icon {
+                font-size: 40px;
+            }
+            
+            .stat-number {
+                font-size: 28px;
+            }
+            
+            .stat-label {
+                font-size: 16px;
+            }
+        
