--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth; /* Optional */
+  scroll-padding-top: 60px; /* Equal to your navbar height */
+}
 
 * {
   margin: 0;
@@ -293,5 +297,6 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
