--- a/style.css
+++ b/style.css
@@ -289,6 +289,9 @@ a.bx bxl-whatsapp {
   white-space: nowrap;
 }
 
+.ebube{
+text-decoration:none;
+}
 
 footer a {
   margin: 0 10px;
@@ -298,6 +301,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
