--- a/style.css
+++ b/style.css
@@ -139,6 +139,13 @@ header {
   width: 90%;
   max-width: 1000px;
   margin: auto;
+  padding: 10px 0;
+}
+
+.container {
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
   padding: 30px 0;
 }
 
@@ -301,6 +308,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
