--- a/style.css
+++ b/style.css
@@ -48,10 +48,11 @@ html {
 .logo {
   height: 50px;
   width: auto;
-  vertical-align: middle;
-  margin-right: 10px;
 }
 
+.text-block {
+  text-align: right; /* Aligns h1 + p to the right */
+}
 
 /* Sidebar menu styling */
 #sidebar {
@@ -131,10 +132,14 @@ header {
   background: #008000;
   color: white;
   padding: 5px 0;
-  text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
- }
+}
 
+header .container {
+  display: flex;                 /* Put items in a row */
+  justify-content: space-between; /* Logo left, text right */
+  align-items: center;           /* Center vertically */
+}
 
 
 .container {
@@ -303,6 +308,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
