--- a/style.css
+++ b/style.css
@@ -275,6 +275,10 @@ i.bx {
   font-size:30px;
   }
 
+i.bx:hover {
+  transform: scale(1.2); /* makes it 20% bigger on hover */
+}
+
 
 
 .copyright-text {
@@ -296,6 +300,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
