--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ figcaption {
   max-width: 1000px;
   margin:auto;
   border:0;
+  margin-bottom:20px;
   }
 
 footer {
@@ -308,6 +309,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
