--- a/style.css
+++ b/style.css
@@ -191,6 +191,11 @@ figure>video{
   margin:auto;
 }
 
+.video{
+width:100%;
+height:40%;
+}
+
 figcaption {
   text-align: center;
   font-size: 14px;
@@ -298,6 +303,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
