--- a/style.css
+++ b/style.css
@@ -191,10 +191,14 @@ figure>video{
   margin:auto;
 }
 
-.video{
-width:100%;
-height:40%;
+.video {
+  max-width: 500px; /* or 400px, depending on how small you want it */
+  width: 100%;      /* makes it responsive */
+  height: auto;     /* keeps the aspect ratio */
+  display: block;
+  margin: auto;
 }
+
 
 figcaption {
   text-align: center;
@@ -303,6 +307,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
