--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ figure>video{
   height: auto;     /* keeps the aspect ratio */
   display: block;
   margin: auto;
+  max-height: 300px;
 }
 
 
@@ -307,6 +308,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
