--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html {
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  display:block;
 }
 
 .carousel-image {
@@ -28,11 +29,13 @@ html {
   position: absolute;
   opacity: 0;
   transition: opacity 1s ease-in-out;
+   display:block;
 }
 
 .carousel-image.active {
   opacity: 1;
   z-index: 1;
+   display:block;
 }
 
 #hamburger-icon {
@@ -308,6 +311,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
