--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ text-decoration: none;
 h2 {
   color: #008000;
   margin-bottom: 10px;
+  text-align:center;
 }
 
 figure {
@@ -311,6 +312,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
