--- a/style.css
+++ b/style.css
@@ -186,15 +186,20 @@ h2 {
   text-align:center;
 }
 
-figure {
+.grid-container{
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+}
+
+/*figure {
   margin-bottom: 20px;
 }
 
 
 .video {
-  max-width: 500px; /* or 400px, depending on how small you want it */
-  width: 100%;      /* makes it responsive */
-  height: auto;     /* keeps the aspect ratio */
+  max-width: 500px; 
+  width: 100%;      
+  height: auto;     
   display: block;
   margin: auto;
  }
@@ -206,7 +211,7 @@ figcaption {
   color: #444;
   margin: 10px,0;
   font-weight:bold;
-}
+}*/
 
 .contact-info {
   list-style-type: none;
@@ -308,6 +313,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
