--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ h2 {
   grid-template-columns: 33% 33% 33%;
 }
 
-/*figure {
+figure {
   margin-bottom: 20px;
 }
 
@@ -211,7 +211,7 @@ figcaption {
   color: #444;
   margin: 10px,0;
   font-weight:bold;
-}*/
+}
 
 .contact-info {
   list-style-type: none;
@@ -313,6 +313,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
