--- a/style-mobile.css
+++ b/style-mobile.css
@@ -11,7 +11,7 @@ html {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.container {
+/*.container {
   width: 90%;
   max-width: 1000px;
   margin: auto;
@@ -24,8 +24,8 @@ section {
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-  padding-top: 60px;  /* Make room for navbar */
- }
+  padding-top: 60px;  
+ }*/
 
 #sidebar {
   width: 80%; /* Wider on mobile */
@@ -91,4 +91,9 @@ figcaption {
   font-weight:bold;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr; /* default: one column (for phone) */
+  gap: 20px; /* spacing between items */
+}
         
