--- a/style.css
+++ b/style.css
@@ -190,12 +190,13 @@ h2 {
   margin:10px;
   clear:both;
   margin-bottom:20px;
+  display:block;
 }
 
 @media (min-width: 768px) {
  .grid-container {
   display:grid;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 25% 25% 25%;
   max-width:1000px;
   margin:auto;
   width:90%; 
@@ -325,6 +326,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
