--- a/style.css
+++ b/style.css
@@ -128,7 +128,8 @@ body {
 header {
   top: 0;
   z-index: 1000;
-  background: #008000;
+  /*background: #008000;*/
+  background:black;
   color: white;
   padding: 5px 0;
   text-align: center;
@@ -320,6 +321,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
