--- a/style.css
+++ b/style.css
@@ -163,9 +163,9 @@ text-decoration: none;
 line-height: 1.5;
  }
 
-.bx bx-map,
-bx bx-phone,
-bx bx-envelope{
+.bx-map,
+.bx-phone,
+.bx-envelope{
 font-size:30px;
 text-decoration: none;
 }
@@ -313,6 +313,7 @@ footer a {
 footer a:hover {
   color: #ffc107; /* Yellow hover color */
 }
+
 
 
 
